--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.10",
     "@stitches/react": "^1.2.8",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
