--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "immer": "^10.0.2",
     "keen-slider": "^6.8.6",
     "next": "13.4.19",
     "react": "18.2.0",
