--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.10",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@stitches/react": "^1.2.8",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
