--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "stripe": "^13.3.0",
     "typescript": "5.2.2"
   },
