--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^2.1.0"
+    "@rocketseat/eslint-config": "^2.1.0",
+    "react-media-hook": "^0.5.0"
   }
 }
